k8s-basicgui-server.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service

spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: web-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
        - name: web-service
          image: gitlab-df-registry.imt-atlantique.fr/devops/devops-retake-01/basicgui-image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: regcred

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: my-root-ca-issuer
  name: web-ingress
spec:
  tls:
    - hosts:
      - www-01.example.com
      secretName: www-example-secret
  rules:
    - host: www-01.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-service
              port:
                number: 80
