k8s-hello-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello 
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: my-root-ca-issuer
spec:
  rules:
  - host: hello-xy.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
  tls:
  - hosts:
    - hello-01.example.com
    secretName: hello-secret
